# software

./: .gitignore  CMakeLists.txt  README.md  gitignore
doc/doxygen/: Doxyfile
doc/gaussianPyramidModule/html/: _d_o_g_pyramid_8cpp.html  _d_o_g_pyramid_8cpp__incl.map  _d_o_g_pyramid_8cpp__incl.md5  _d_o_g_pyramid_8hpp.html  _d_o_g_pyramid_8hpp__dep__incl.map  _d_o_g_pyramid_8hpp__dep__incl.md5  _d_o_g_pyramid_8hpp__incl.map  _d_o_g_pyramid_8hpp__incl.md5  _d_o_g_pyramid_8hpp_source.html  _gaussian_level_pyramid_8cpp.html  _gaussian_level_pyramid_8cpp__incl.map  _gaussian_level_pyramid_8cpp__incl.md5  _gaussian_level_pyramid_8hpp.html  _gaussian_level_pyramid_8hpp__dep__incl.map  _gaussian_level_pyramid_8hpp__dep__incl.md5  _gaussian_level_pyramid_8hpp__incl.map  _gaussian_level_pyramid_8hpp__incl.md5  _gaussian_level_pyramid_8hpp_source.html  _gaussian_pyramid_8cpp.html  _gaussian_pyramid_8cpp__incl.map  _gaussian_pyramid_8cpp__incl.md5  _gaussian_pyramid_8hpp.html  _gaussian_pyramid_8hpp__dep__incl.map  _gaussian_pyramid_8hpp__dep__incl.md5  _gaussian_pyramid_8hpp__incl.map  annotated.html  (+46 more)
gui/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main  moc_MainWindow.cpp  moc_Model.cpp  moc_mainwindow.cpp  ui_MainWindow.h  ui_mainwindow.h
gui/source/: #main.cpp#  Controller.cpp  Controller.h  Controller.h~  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.cpp~  Model.h  Model.h~  View.ui~  main.cpp  main.cpp~  mainwindow.cpp~  mainwindow.h~  source.pro
imagePyramid/: main
imagePyramid/source/: main.cpp
module_gaussianPyramid/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  LevelPyramide.cpp~  LevelPyramide.h~  Makefile  Pyramide.cpp~  Pyramide.h~  cmake_install.cmake  main  main.cpp~
module_gaussianPyramid/source/: DOGPyramid.cpp  DOGPyramid.h  DOGPyramide.cpp  DOGPyramide.h  GaussianLevelPyramid.cpp  GaussianLevelPyramid.h  GaussianLevelPyramid.hpp  GaussianPyramid.cpp  GaussianPyramid.h  GaussianPyramid.hpp  LevelPyramide.cpp  LevelPyramide.cpp.bak  LevelPyramide.cpp~  LevelPyramide.h  LevelPyramide.h.bak  LevelPyramide.h~  Pyramide.cpp  Pyramide.cpp.bak  Pyramide.cpp~  Pyramide.h  Pyramide.h.bak  Pyramide.h~  main.cpp  main.cpp~
mvc/: CMakeCache.txt  main
mvc/source/: Controller.cpp  MainWindow.h
scrum/: .~lock.sprint_backlog.ods#  product_backlog.ods  sprint_backlog.ods
source/: main.cpp
source/contract/: contract.hpp
source/detector/: DOGDetector.cpp  DOGDetector.hpp  Feature.cpp  Feature.hpp  Sift.cpp  Sift.hpp  SiftDetector.cpp  SiftDetector.hpp
source/imagePyramid/: DOGPyramid.cpp  DOGPyramid.hpp  GaussianLevelPyramid.cpp  GaussianLevelPyramid.hpp  GaussianPyramid.cpp  GaussianPyramid.hpp  LevelPyramid.cpp  LevelPyramid.hpp  Pyramid.cpp  Pyramid.hpp
source/mvc/: Controller.h  DOGDetectorModel.cpp  DOGDetectorModel.hpp  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  cmake_install.cmake  moc_Controller.cpp  moc_MainWindow.cpp  moc_Model.cpp
source/sift/: Feature.cpp  Feature.hpp  Sift.cpp  Sift.hpp
test/: CMakeLists.txt
test/compile/: CMakeCache.txt  Makefile  test
uml/: MVC.zargo~  View.zargo  View.zargo~
uml/Image Pyramide/: diagramme.zargo  diagramme.zargo~
uml/MVC/: MVC.zargo
uml/SIFT/: SIFT.uml  SIFT.uml~
uml/argoUML/: SIFT.uml  diagramme.zargo
unityTest/: CMakeLists.txt
unityTest/compile/: CMakeCache.txt  Makefile  cmake_install.cmake  test
unityTest/source/: main.cpp
unityTest/source/testDetector/: TestDOGDetector.cpp  TestDOGDetector.hpp
unityTest/source/testImagePyramid/: TestDOGPyramid.cpp  TestDOGPyramid.hpp  TestGaussianPyramid.cpp  TestGaussianPyramid.hpp
(+40 files in other folders)
